@@ -13382,7 +13382,7 @@ otherwise.
 
 \fun{GEN}{perm_inv}{GEN p} returns the inverse of $p$.
 
-\fun{GEN}{perm_pow}{GEN p, long n} returns $p^n$
+\fun{GEN}{perm_pow}{GEN p, GEN n} returns $p^n$
 
 \fun{GEN}{perm_powu}{GEN p, ulong n} returns $p^n$
 
